CHANGES IN VERSION 3.3.1
-------------------------

- Parameter 'type' added to plotChromPeakDensity and 'whichPeaks' to
  highlightChromPeaks. Both parameters are passed to the 'type' argument
  of chromPeaks.
- Parameter 'type' in chromPeaks gets additional option "apex_within" to return
  chromatographic peaks that have their apex within the defined rt and/or m/z
  range.
- Add functions rla and rowRla to calculate RLA (relative log abundances).
- Add peaksWithMatchedFilter to perform peak detection in chromatographic
  (MRM/SRM) data (issues #277 and #278).
- Add peaksWithCentWave to perform centWave peak detection in chromatographic
  (MRM/SRM) data (issue #279).
- Add findChromPeaks,Chromatogram methods for CentWaveParam and
  MatchedFilterParam (issue #280).


CHANGES IN VERSION 3.1.3
-------------------------

BUG FIXES:
- Fix misplaced parenthesis in the check for multiple spectra in
  findChromPeaks,OnDiskMSnExp,MSWParam. Thanks to @RonanDaly (PR #276).
- Update link to correct metlin page in diffreport result (issue #204).


CHANGES IN VERSION 3.1.2
-------------------------

NEW FEATURES
- Add filterFeatureDefinitions function.

BUG FIXES:
- Fix #273: better error message in case not a single feature could be defined
  by groupChromPeaks.


CHANGES IN VERSION 3.1.1
-------------------------

NEW FEATURES
- Reading raw files using xcmsSet or xcmsRaw uses now the automatic file type
  detection feature from mzR.
- c function to concatenate XCMSnExp objects.
- groupnames method for XCMSnExp objects (issue #250).

BUG FIXES:
- Fix #237: findPeaks.MSW was not throwing an error if applied to multi-spectrum
  MS file.
- Fix #249: quantile call in adjustRtime PeakGroups without na.rm = TRUE.
- Fix #259


CHANGES IN VERSION 2.99.10
-------------------------

BUG FIXES:
- Fix #230: Failing vignettes on Windows.


CHANGES IN VERSION 2.99.9
-------------------------

USER VISIBLE CHANGES:
- Chromatographic peak detection uses adjusted retention times on an aligned