@@ -821,7 +821,7 @@ setMethod("rawMat", "xcmsRaw", function(object,
 ## Note: this function silently drops retention times for which no intensity-mz
 ## pair was measured.
 .rawMat <- function(mz, int, scantime, valsPerSpect, mzrange = numeric(),
-                    rtrange = numeric(), scanrange = numeric,
+                    rtrange = numeric(), scanrange = numeric(),
                     log = FALSE) {
     if (length(rtrange) >= 2) {
         rtrange <- range(rtrange)
@@ -831,10 +831,16 @@ setMethod("rawMat", "xcmsRaw", function(object,
     if (length(scanrange) < 2)
         scanrange <- c(1, length(valsPerSpect))
     else scanrange <- range(scanrange)
+    if (!all(is.finite(scanrange)))
+        stop("'scanrange' does not contain finite values")
+    if (!all(is.finite(mzrange)))
+        stop("'mzrange' does not contain finite values")
+    if (!all(is.finite(rtrange)))
+        stop("'rtrange' does not contain finite values")
     if (scanrange[1] == 1)
         startidx <- 1
     else
-        startidx <- sum(valsPerSpect[1:(scanrange[1]-1)]) + 1
+        startidx <- sum(valsPerSpect[1:(scanrange[1] - 1)]) + 1
     endidx <- sum(valsPerSpect[1:scanrange[2]])
     scans <- rep(scanrange[1]:scanrange[2],
                  valsPerSpect[scanrange[1]:scanrange[2]])
