@@ -356,6 +356,8 @@ by sample (file).
 or set the correspondence results, i.e. the mz-rt features (peak groups).
 Similar to the \code{chromPeaks} it is possible to extract features for
 specified m/z and/or rt ranges (see \code{chromPeaks} for more details).
+See also \code{\link{featureSummary}} for a function to calculate simple
+feature summaries.
 
 \code{chromPeaks}, \code{chromPeaks<-}: extract or set
 the matrix containing the information on identified chromatographic
@@ -574,6 +576,8 @@ head(peaks(xs))
 
     \code{\link{as}} (\code{as(x, "data.frame")}) in the \code{MSnbase}
     package for the method to extract MS data as \code{data.frame}s.
+
+    \code{\link{featureSummary}} to calculate basic feature summaries.
 
 \code{\link{fillChromPeaks}} for the method to fill-in eventually
     missing chromatographic peaks for a feature in some samples.
